feat(auth): verificación de email, logout con Redis y mejoras de seguridad
- Verificación de email con código de 6 dígitos guardado en Redis (15 min, 5 intentos, reenvío cada 60 s)

- Nuevos endpoints POST /auth/verify-email y POST /auth/resend-verification

- El login local responde 403 EMAIL_NOT_VERIFIED si el correo no está verificado

- Lista negra de tokens de logout en Redis compartida con el API Gateway

- El token JWT incluye el claim email normalizado

- Login con Google: exige email verificado y reclama cuentas locales sin verificar

- PasswordPolicy única para registro y recuperación de contraseña

- Emails normalizados a minúsculas en registro y login

- Recuperación de contraseña: enlace desde FRONTEND_URL, correo para cuentas de Google y sin rollback al borrar tokens inválidos

- Remitente de correo MyAnimaLog con codificación UTF-8

- Fix: UserRepositoryAdapter no mapeaba emailVerified

- Se elimina /api/ de las rutas excluidas del filtro JWT y @CrossOrigin del AuthController