@@ -1,23 +1,23 @@
 package user.microservice.pets.application.services;
 
-import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
+import user.microservice.pets.domain.enums.AuthProvider;
 import user.microservice.pets.domain.exceptions.ExpiredPasswordResetTokenException;
 import user.microservice.pets.domain.exceptions.InvalidPasswordResetTokenException;
 import user.microservice.pets.domain.exceptions.InvalidUserDataException;
-import user.microservice.pets.domain.exceptions.UserNotFoundException;
 import user.microservice.pets.domain.model.PasswordResetToken;
 import user.microservice.pets.domain.model.User;
+import user.microservice.pets.domain.policies.PasswordPolicy;
 import user.microservice.pets.domain.ports.in.ResetPasswordUseCase;
 import user.microservice.pets.domain.ports.out.EmailSenderPort;
 import user.microservice.pets.domain.ports.out.PasswordResetTokenRepositoryPort;
 import user.microservice.pets.domain.ports.out.UserRepositoryPort;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
-import java.util.regex.Pattern;
 
 @Slf4j
 @Service
@@ -29,103 +29,83 @@ public class ResetPasswordService implements ResetPasswordUseCase {
     private final EmailSenderPort emailService;
     private final PasswordEncoder passwordEncoder;
 
-    private static final Pattern PASSWORD_PATTERN =
-            Pattern.compile("^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$%^&+=!])(?=\\S+$).{8,}$");
-
     @Override
-    @Transactional
-    public void execute(String token, String newPassword) {
+    @Transactional(noRollbackFor = {
+            InvalidPasswordResetTokenException.class,
+            ExpiredPasswordResetTokenException.class
+    })
+    public void execute(String rawToken, String newPassword) {
+        validateInputs(rawToken, newPassword);
+        String token = rawToken.trim();
 
-        validateInputs(token, newPassword);
-
-        PasswordResetToken resetToken = tokenRepository.findByToken(token.trim())
+        PasswordResetToken resetToken = tokenRepository.findByToken(token)
                 .orElseThrow(() -> {
-                    log.warn("Invalid password reset token attempted: {}", token);
+                    log.warn("Invalid password reset token attempted");
                     return new InvalidPasswordResetTokenException("Invalid or expired token");
                 });
 
         if (resetToken.isUsed()) {
-            log.warn("Attempt to reuse password reset token for email: {}", resetToken.getEmail());
-            tokenRepository.deleteByToken(token.trim());
+            tokenRepository.deleteByToken(token);
             throw new InvalidPasswordResetTokenException("Token has already been used");
         }
 
         if (resetToken.getExpiresAt().isBefore(LocalDateTime.now())) {
-            log.warn("Expired password reset token for email: {}", resetToken.getEmail());
-            tokenRepository.deleteByToken(token.trim());
+            tokenRepository.deleteByToken(token);
             throw new ExpiredPasswordResetTokenException("Token has expired");
         }
 
-        User user = userRepository.findByEmail(resetToken.getEmail())
-                .orElseThrow(() -> {
-                    log.error("User not found for password reset token email: {}", resetToken.getEmail());
-                    tokenRepository.deleteByToken(token.trim());
-                    return new UserNotFoundException("User not found");
-                });
+        User user = userRepository.findByEmail(resetToken.getEmail()).orElse(null);
+        if (user == null || user.getAuthProvider() != AuthProvider.LOCAL) {
+            log.warn("Password reset token for missing or non-local account: {}", resetToken.getEmail());
+            tokenRepository.deleteByToken(token);
+            throw new InvalidPasswordResetTokenException("Invalid or expired token");
+        }
 
-        if (passwordEncoder.matches(newPassword, user.getPassword())) {
+        // Esta excepción SÍ hace rollback: el token se conserva para que el usuario lo intente de nuevo
+        if (user.getPassword() != null && passwordEncoder.matches(newPassword, user.getPassword())) {
             throw new InvalidUserDataException("New password must be different from current password");
         }
 
         user.setPassword(passwordEncoder.encode(newPassword));
+        // Usar el enlace del correo demuestra que el email es suyo
+        user.setEmailVerified(true);
         userRepository.save(user);
 
-        tokenRepository.deleteByToken(token.trim());
+        tokenRepository.deleteByEmail(user.getEmail());
 
         try {
             emailService.sendEmail(
                     user.getEmail(),
-                    "Contraseña cambiada con éxito",
-                    buildSuccessEmailBody(user.getUsername())
-            );
-            log.info("Password successfully reset for user: {}", user.getEmail());
+                    "Tu contraseña de MyAnimaLog fue cambiada",
+                    buildSuccessEmailBody(user.getUsername()));
         } catch (Exception e) {
-            log.error("Failed to send password reset confirmation email to: {}", user.getEmail(), e);
-            // No fallar la operación si el email falla
+            log.error("Failed to send password change confirmation to {}: {}", user.getEmail(), e.getMessage());
         }
+
+        log.info("Password successfully reset for user: {}", user.getEmail());
     }
 
     private void validateInputs(String token, String newPassword) {
-        // Validar token
-        if (token == null || token.trim().isEmpty()) {
+        if (token == null || token.isBlank()) {
             throw new InvalidUserDataException("Token cannot be empty");
         }
-
         if (token.length() > 255) {
             throw new InvalidUserDataException("Invalid token format");
         }
-
-        // Validar nueva contraseña
-        if (newPassword == null || newPassword.trim().isEmpty()) {
-            throw new InvalidUserDataException("Password cannot be empty");
-        }
-
-        if (newPassword.length() < 8) {
-            throw new InvalidUserDataException("Password must be at least 8 characters long");
-        }
-
-        if (newPassword.length() > 128) {
-            throw new InvalidUserDataException("Password is too long");
-        }
-
-        if (!PASSWORD_PATTERN.matcher(newPassword).matches()) {
-            throw new InvalidUserDataException(
-                    "Password must contain at least one uppercase letter, one lowercase letter, " +
-                            "one digit, and one special character"
-            );
-        }
+        PasswordPolicy.validate(newPassword);
     }
 
     private String buildSuccessEmailBody(String username) {
         return """
             Hola %s,
-            
-            Tu contraseña ha sido cambiada exitosamente.
-            
-            Si no realizaste este cambio, por favor contacta a soporte inmediatamente.
-            
+
+            La contraseña de tu cuenta de MyAnimaLog fue cambiada correctamente.
+
+            Si no realizaste este cambio, restablece tu contraseña de inmediato
+            y contáctanos respondiendo a este correo.
+
             Saludos,
-            El equipo de soporte
+            El equipo de MyAnimaLog
             """.formatted(username != null ? username : "");
     }
 }
